# ecbPenguin

./: .clang_format  .gitignore  CMakeLists.txt  MP_README.md  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
cmake/: clang-cxx-dev-tools.cmake
include/: bitmapreader.h  ecbencryptor.h  evpwrapper.h  filewriter.h  onetimepad.h  qrngprocessor.h
src/: bitmapreader.cpp  ecbencryptor.cpp  evpwrapper.cpp  filewriter.cpp  onetimepad.cpp  penguinify.cpp  qrngprocessor.cpp
tests/: CMakeLists.txt
tests/data/: README.md  quantum.qrand
tests/include/: mocks.h  mocks_otp.h
tests/src/: test_bitmapreader.cpp  test_ecbencryptor.cpp  test_evpwrapper.cpp  test_filewriter.cpp  test_otpencryptor.cpp
